--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -42,7 +42,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "from scipy.stats import binom, geom, poisson, expon\n",
+    "import scipy.stats as st\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not directly related to question, just further explanation of what pmf and cdf are doing....\n",
+    "\n",
+    "# lets say we are tossing 10 fair coins...\n",
+    "# we'll define getting a heads as a success, which is a 50% or 0.5 chance\n",
+    "# we can create the binomial distribution for this as follows:\n",
+    "coin_tosses_10 = binom(10, 0.5)\n",
+    "\n",
+    "# we can use pmf (probability mass function) to see the chance of getting a certain number of heads\n",
+    "print('Chance to get exactly zero heads in 10 tosses: ', coin_tosses_10.pmf(0))\n",
+    "print('Chance to get exactly 10 heads in 10 tosses: ', coin_tosses_10.pmf(10))\n",
+    "print('Chance to get exactly 5 heads in 10 tosses: ', coin_tosses_10.pmf(5))\n",
+    "print('Chance to get exactly 3 heads in 10 tosses: ', coin_tosses_10.pmf(3))\n",
+    "print('Chance to get exactly 7 heads in 10 tosses: ', coin_tosses_10.pmf(7))\n",
+    "\n",
+    "# we can use the cdf (cumulative density function) to see the chance of getting a certain number of heads or less...\n",
+    "print()\n",
+    "print('Chance to get zero heads or less in 10 tosses: ', coin_tosses_10.cdf(0))\n",
+    "print('Chance to get 10 heads or less in 10 tosses: ', coin_tosses_10.cdf(10))\n",
+    "print('Chance to get 5 heads or less in 10 tosses: ', coin_tosses_10.cdf(5))\n",
+    "print('Chance to get 3 heads or less in 10 tosses: ', coin_tosses_10.cdf(3))\n",
+    "print('Chance to get more than 3 heads 10 tosses: ', 1-coin_tosses_10.cdf(3))\n",
+    "\n",
+    "print('Note that ...cdf(3) + (1-cdf(3)) = 1:', coin_tosses_10.cdf(3) + (1-coin_tosses_10.cdf(3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To answer the question we want to first reframe the question:\n",
+    "# what we want to know is on average how likely it is that at least 10 people will\n",
+    "# miss their flight, if less than 10 then they have overbooked, when 10 or more, they have enough seats\n",
+    "# as they are selling 460 tickets for 450 seats...\n",
+    "# ....and historically 3% or 0.03 is the chance of people missing the flight\n",
+    "\n",
+    "# we can create the binomial distribution like: binom(460, 0.03)\n",
+    "# we could capture that then call pmf/cdf or directly call binom.pmf(value_to_check, no_of_events, chance_of_success)\n",
+    "# chance_of_success here is actually chance of someone missing a flight...\n",
+    "# then we can either sum up the probabilities for 0,1,2,3,4,5,6,7,8,9,10 people missing their flight using pmf\n",
+    "\n",
+    "c = 0\n",
+    "for i in range(11):\n",
+    "    c = c + binom.pmf(i, 460, 0.03)\n",
+    "print('summing up the pmf values:', 1-c)\n",
+    "\n",
+    "# cdf\n",
+    "print('directly calculating the cumlative probability: ', 1-binom.cdf(10,460,0.03))\n",
+    "\n",
+    "print('slightly different due to rounding errors, but essentially the same number')\n",
+    "\n",
+    "# we could also creat the distro then call the cdf function:\n",
+    "binom_distro = binom(460, 0.03)\n",
+    "1-binom_distro.cdf(10)\n",
+    "\n",
+    "# we subtract binom_distro.cdf(10) from 1 because we want to know if they have enough seats \n",
+    "# what we actually calculated is how likely it is that they are overbooked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1-binom.cdf(10,460,0.03)"
    ]
   },
   {
@@ -76,7 +155,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "# Note, the question is not saying what is the chance of sucess on the 4 call, but rather\n",
+    "# what is the chance of 3 or less failures\n",
+    "p = 0.3\n",
+    "geom_dist = geom(p)\n",
+    "1-geom_dist.cdf(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Chance of a success out of 0 attempts: ', geom_dist.cdf(0))\n",
+    "print('Chance of a success out of 1 attempts - cdf: ', geom_dist.cdf(1))\n",
+    "print('Chance of a success out of 1 attempts - pmf: ', geom_dist.pmf(1))\n",
+    "print('Chance of a success out of 2 attempts or less: ', geom_dist.cdf(2))\n",
+    "print('Chance of a success on exactly the 2nd attempt: ', geom_dist.pmf(2))\n",
+    "print('Chance of a success out of 3 attempts or less: ', geom_dist.cdf(3))\n",
+    "print('Chance of a success on exactly the 3rd attempt: ', geom_dist.pmf(3))\n",
+    "print('geom_dist.pmf(1)+geom_dist.pmf(2)+geom_dist.pmf(3)', geom_dist.pmf(1)+geom_dist.pmf(2)+geom_dist.pmf(3))\n",
+    "\n",
+    "print('as we calculated the chance of a success in 3 attempts, the chance of 3 failers is 1-that', 1-geom_dist.cdf(3))"
    ]
   },
   {
@@ -111,7 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "# here we want to utilize a poisson distribution...\n",
+    "poisson_dist = poisson(500)\n",
+    "1-poisson_dist.cdf(550) # minus 1 as we are calculating the probabilty of 550 or less..."
    ]
   },
   {
@@ -127,7 +230,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "# we have the chance of failer from above, in 24 \"attempts\" what is chance of a single failure...\n",
+    "# back to binom...\n",
+    "binom_dist = binom(24,1-poisson_dist.cdf(550))\n",
+    "binom_dist.cdf(0) # ...chance of zero failures....\n",
+    "\n",
+    "# note: in the really real world for most websites we'd expect a failure every day since\n",
+    "# traffic is likely not at balanced rate through-out the day"
    ]
   },
   {
@@ -160,7 +269,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import expon\n",
+    "\n",
+    "#the parameter represents the rate of events occuring per unit of time\n",
+    "lambda_value = 0.1\n",
+    "\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "\n",
+    "lambda_inv.cdf(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,7 +294,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "1-lambda_inv.cdf(15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,7 +320,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "#code here\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "mean = 150\n",
+    "std = 10\n",
+    "\n",
+    "norm_dist = norm(loc = mean, scale = std)\n",
+    "print(f\"The probability of a birds weight being between 140 and 160 grams is {norm_dist.cdf(160) - norm_dist.cdf(140)}\")\n",
+    "\n",
+    "print(\"Recall that on a normal/gaussian distribution that the chance of...\")\n",
+    "print(\"...being between 1 standard deviation from the mean: 68%\")\n",
+    "print(\"...being between 2 standard deviations from the mean: 95%\")\n",
+    "print(\"...being between 3 standard deviations from the mean: 99.7%\")\n",
+    "print(\"and we are essentially checking if they are within 1 standard deviation from the mean\")"
    ]
   },
   {
@@ -223,7 +356,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "from scipy.stats import expon\n",
+    "\n",
+    "#the parameter represents the rate of events occuring per unit of time\n",
+    "lambda_value = 1/50\n",
+    "\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "\n",
+    "lambda_inv.cdf(30)"
    ]
   }
  ],
